--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,10 @@
 ---
 # roles/swap/defaults/main.yml
 
-swap_file_path: /swapfile
-swap_file_size_mb: 2048
-swap_swappiness: 10
+swap_file_path: /swapfile            # Path to the swap file
+swap_file_size_mb: 2048              # Size of the swap file in megabytes
+swap_swappiness: 10                  # Swappiness value to set via sysctl
+
+# Optional flags
+swap_add_fstab: true                 # Add the swap file to /etc/fstab for persistence
+swap_activate: true                  # Immediately activate swap with 'swapon'
