--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: "Max Bergmann"
-  description: "Ansible role for managing a swap file"
+  description: "Create and configure a Linux swap file."
   license: "MIT"
   min_ansible_version: "2.9"
   galaxy_tags:
