--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Max Bergmann"
   description: "Create and configure a Linux swap file."
-  license: "MIT"
+  license: Unlicense
   min_ansible_version: "2.9"
   galaxy_tags:
     - swap
